feat: create virtualDom + add interpreter to convert virtualDom to DOM

--- a/src/htmlSample.html
+++ b/src/htmlSample.html
@@ -5,18 +5,20 @@
   <title>Hello, world!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <script type="text/javascript" src="index.ts" defer></script>
+  <script type="module" src="indexSample.ts" defer></script>
 </head>
 <body>
 <h1>Hello, world!</h1>
 <div>
   <p>
-    On recode react
+    On recode react !!!
   </p>
-  <ul id="todoList">
-  </ul>
-  <input type="text" id="listInput"/>
-  <button onclick="handleAddInput('listInput', 'todoList')">Insert new value in list</button>
+  <div id="root"></div>
+<!--  <ul id="todoList">-->
+<!--  </ul>-->
+<!--  <input type="text" id="listInput"/>-->
+<!--  <button onclick="handleAddInput('listInput', 'todoList')">Insert new value in list</button>-->
+<!--  <button onclick="renderDom()">Render dom</button>-->
 </div>
 </body>
 </html>
