--- a/src/htmlSample.html
+++ b/src/htmlSample.html
@@ -5,7 +5,7 @@
   <title>Hello, world!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <script type="module" src="indexSample.ts" defer></script>
+  <script type="module" src="application.ts" defer></script>
 </head>
 <body>
 <h1>Hello, world!</h1>
