--- a/src/htmlSample.html
+++ b/src/htmlSample.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <script type="module" src="application.ts" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Hello, world!</h1>
