--- a/src/htmlSample.html
+++ b/src/htmlSample.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hello, world!</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
-  <script type="module" src="application.ts" defer></script>
-  <link rel="stylesheet" href="style.css">
+  <meta content="width=device-width,initial-scale=1" name="viewport" />
+  <meta content="" name="description" />
+  <script defer src="application.ts" type="module"></script>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <h1>Hello, world!</h1>
@@ -14,12 +14,12 @@
   <p>
     On recode react !!!
   </p>
-  <div id="root"></div>
-<!--  <ul id="todoList">-->
-<!--  </ul>-->
-<!--  <input type="text" id="listInput"/>-->
-<!--  <button onclick="handleAddInput('listInput', 'todoList')">Insert new value in list</button>-->
-<!--  <button onclick="renderDom()">Render dom</button>-->
+  <div id="0"></div>
+  <!--  <ul id="todoList">-->
+  <!--  </ul>-->
+  <!--  <input type="text" id="listInput"/>-->
+  <!--  <button onclick="handleAddInput('listInput', 'todoList')">Insert new value in list</button>-->
+  <!--  <button onclick="renderDom()">Render dom</button>-->
 </div>
 </body>
 </html>
