refactor: clean code and comments

--- a/src/htmlSample.html
+++ b/src/htmlSample.html
@@ -2,24 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello, world!</title>
+  <title>Custom UI library sample file</title>
   <meta content="width=device-width,initial-scale=1" name="viewport" />
   <meta content="" name="description" />
   <script defer src="application.ts" type="module"></script>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<h1>Hello, world!</h1>
+<h1>Sample application to test the custom UI library (reproducing React)</h1>
 <div>
   <p>
-    On recode react !!!
+    This is the sample html file used to insert the custom UI library elements onto the webpage
   </p>
   <div id="0"></div>
-  <!--  <ul id="todoList">-->
-  <!--  </ul>-->
-  <!--  <input type="text" id="listInput"/>-->
-  <!--  <button onclick="handleAddInput('listInput', 'todoList')">Insert new value in list</button>-->
-  <!--  <button onclick="renderDom()">Render dom</button>-->
 </div>
 </body>
 </html>
